Update package dependencies and improve TypeScript configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,27 +13,18 @@
     "baseUrl": "./src",
     "paths": {
       // Versioned API aliases
-      "@v1/controllers/*": ["api/v1/controllers/*"],
-      "@v1/routes/*": ["api/v1/routes/*"],
-      "@v1/services/*": ["api/v1/services/*"],
-      "@v1/models/*": ["api/v1/models/*"],
-      "@v1/interfaces/*": ["api/v1/interfaces/*"],
-      "@v1/validators/*": ["api/v1/validators/*"],
-      "@v1/constants/*": ["api/v1/constants/*"],
-
-      // Global/shared modules
+      "@v1/*": ["api/v1/*"], // 👈 ADD THIS
+      "@controllers/*": ["controllers/*"],
+      "@models/*": ["models/*"],
+      "@services/*": ["services/*"],
       "@middlewares/*": ["middlewares/*"],
       "@utils/*": ["utils/*"],
       "@config/*": ["config/*"],
+      "@routes/*": ["routes/*"],
       "@types/*": ["types/*"],
-      "@helpers/*": ["helpers/*"],
-      "@data/*": ["data/*"],
-      "@errors/*": ["errors/*"],
-      "@exceptions/*": ["exceptions/*"],
       "@repositories/*": ["repositories/*"],
-      "@lib/*": ["lib/*"],
-      "@assets/*": ["assets/*"],
-      "@node_modules/*": ["./node_modules/*"]
+      "@validators/*": ["validators/*"],
+      "@constants/*": ["constants/*"],
     }
   }
 }
