Implement user management features with CRUD operations and error handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "baseUrl": "./src",
     "paths": {
       // Versioned API aliases
-      "@v1/*": ["api/v1/*"], // 👈 ADD THIS
+      "@v1/*": ["api/v1/*"],
       "@controllers/*": ["controllers/*"],
       "@models/*": ["models/*"],
       "@services/*": ["services/*"],
