--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
@@ -26,15 +28,19 @@
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
     "isomorphic-dompurify": "^2.26.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
     "xss": "^1.0.15"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/hpp": "^0.2.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.2.0",
     "@types/validator": "^13.15.2",
