--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write .",
     "test": "echo \"No tests specified\" && exit 0",
     "test:watch": "echo \"No tests specified\" && exit 0",
     "clean": "rm -rf dist",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -44,7 +45,11 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.2.0",
     "@types/validator": "^13.15.2",
-    "eslint": "^9.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
