--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
       "@types/*": ["types/*"],
       "@repositories/*": ["repositories/*"],
       "@validators/*": ["validators/*"],
-      "@constants/*": ["constants/*"],
+      "@constants/*": ["constants/*"]
     }
   }
 }
