feat: update user registration to include first and last name
feat: add mongodb-memory-server for in-memory database testing

fix: correct import paths for ApiError in middleware files

refactor: change user model to use firstName and lastName instead of name

test: remove old user tests and add new integration tests for auth, assessment, certification, institution, and user APIs

test: implement unit tests for assessment, certification, institution, and user services

chore: update tsconfig to include tests and exclude unnecessary files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,19 +12,15 @@
     "moduleResolution": "node",
     "baseUrl": "./src",
     "paths": {
-      // Versioned API aliases
       "@v1/*": ["api/v1/*"],
       "@controllers/*": ["controllers/*"],
       "@models/*": ["models/*"],
       "@services/*": ["services/*"],
       "@middlewares/*": ["middlewares/*"],
       "@utils/*": ["utils/*"],
-      "@config/*": ["config/*"],
-      "@routes/*": ["routes/*"],
-      "@types/*": ["types/*"],
-      "@repositories/*": ["repositories/*"],
-      "@validators/*": ["validators/*"],
-      "@constants/*": ["constants/*"]
+      "@config/*": ["config/*"]
     }
-  }
+  },
+  "include": ["src", "tests"],
+  "exclude": ["node_modules", "dist"]
 }
