--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "husky": "^9.1.7",
     "jest": "^30.0.5",
     "lint-staged": "^16.1.5",
+    "mongodb-memory-server": "^10.2.0",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
