--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@config/*": ["config/*"]
     }
   },
-  "include": ["src", "tests"],
+  "include": ["src", "src/tests"],
   "exclude": ["node_modules", "dist"]
 }
