--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "isomorphic-dompurify": "^2.26.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "multer": "^2.0.2",
+    "openai": "^5.12.2",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
     "xss": "^1.0.15"
@@ -48,6 +50,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.2.0",
     "@types/supertest": "^6.0.3",
     "@types/validator": "^13.15.2",
